  EntityConnectionProviders.connectionProvider(EntityConnection) added
  EntityTablePanel.createStaticEntityTablePanel(), resulting panel is now read-only and without popup menu and south panel
  CriteriaUtil.DefaultStringCriteria.writeObject() and readObject() implemented, tested
  UiUtil, component returned from configuration methods
  PropertySummaryModel moved to common.table package and renamed ColumnSummaryModel, implementation as well
  EntityTableModel.SummaryValueProvider moved to AbstractFilteredTableModel.DefaultColumnValueProvider
  EntityTablePanel.summaryPanel moved to FilteredTablePanel
  H2Database.initializeDatabase() bug fixed, only tries to initialize an embedded database if it is required
0.9.6
  common.swing.model and common.swing.ui packages added, common.ui and common.model refactored accordingly
  org.jminor.framework.client package remaned to swing
  org.jminor.framework.swing moved to org.jminor.swing.framework and org.jminor.common.swing moved to org.jminor.swing.common
  Refactoring in order to move usages of Configuration out of core classes
  Source directory structure improved, now follows maven/gradle best practices
  Plugin and demo sources moved, unit test dependencies fixed, build file refactored
  Reorganized demo sql scripts and reports
  EntityUtil.hash... renamed to map...
  LocalEntityConnection.delete(keys) improved
  JasperReportsWrapper now tries to load reports from classpath if the file is not found in the file system
  Demos split up into separate directories
  Plugins split up into separate directories
  Demos now built into their own build directories
  EntityCriteriaUtil.getWhereClause() now caches the result
  DefaultEntity.DefaultKey.setHashCode() removed awkward if condition
  NextReports plugin added
  NextReports plugin improved
  Plugins are now indipendent modules
  Demos are now independent modules
  SwingMessages added, initialized in LoginPanel, this feels like a hack