@@ -105,7 +105,7 @@
     <jar jarfile="dist/${ant.project.name}-sources.jar" basedir="src/main/java"
          manifest="${build.main}/META-INF/MANIFEST.MF"/>
     <jar jarfile="dist/${ant.project.name}-domain.jar" basedir="build/main"
-           includes="org/jminor/framework/demos/${ant.project.name}/domain/**/*, org/jminor/framework/demos/@{app-id}/server/**/*"
-           manifest="${build.main}/META-INF/MANIFEST.MF"/>
+         includes="org/jminor/framework/demos/${ant.project.name}/domain/**/*, org/jminor/framework/demos/${ant.project.name}/server/**/*"
+         manifest="${build.main}/META-INF/MANIFEST.MF"/>
   </target>
 </project>
