@@ -1,4 +1,4 @@
 jminor.client.connectionType=remote
 jminor.report.path=reports/demos
-jminor.server.hostname=jminor.no-ip.org
+jminor.server.hostname=localhost
 javax.net.ssl.trustStore=JMinorClientTruststore
