@@ -3,13 +3,11 @@
 
   <configurations>
     <conf name="ant.util" description="Utilities required by the build process" />
-    <conf name="build.core" description="used for building core framework components" />
-    <conf name="build.tests" description="used for building framework tests" />
-    <conf name="build.demos" description="used for building framework demos" />
-    <conf name="runtime.tests" description="used for running unit tests and compiling demo reports" />
-    <conf name="runtime.client" description="used for running a remote or local client" />
-    <conf name="runtime.server" description="used for running a server instance" />
-    <conf name="runtime.server-monitor" description="used for running a server monitor instance" />
+    <conf name="compile" description="used for building core framework components" />
+    <conf name="test" extends="compile" description="used for building and running the framework unit tests" />
+    <conf name="runtime.client" extends="compile" description="used for running a remote or local client" />
+    <conf name="runtime.server" extends="compile" description="used for running a server instance" />
+    <conf name="runtime.server-monitor" extends="compile" description="used for running a server monitor instance" />
   </configurations>
 
   <dependencies>
@@ -20,77 +18,55 @@
     <!--logging-->
     <dependency org="org.slf4j" name="slf4j-api" rev="1.7.7"
                 conf="
-                build.core->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server->master;
                 runtime.server-monitor->master"/>
     <dependency org="ch.qos.logback" name="logback-core" rev="1.1.3"
                 conf="
-                build.core->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server->master;
                 runtime.server-monitor->master"/>
     <dependency org="ch.qos.logback" name="logback-classic" rev="1.1.3"
                 conf="
-                build.core->master;
-                build.tests->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server->master;
                 runtime.server-monitor->master"/>
     <!--unit testing-->
     <dependency org="junit" name="junit" rev="4.12"
                 conf="
-                build.core->master;
-                build.tests->master;
-                build.demos->master;
-                runtime.tests->master"/>
+                compile->master"/>
     <dependency org="org.hamcrest" name="hamcrest-core" rev="1.3"
                 conf="
-                runtime.tests->master"/>
+                test->master"/>
     <!--charting for the server monitor and load test-->
     <dependency org="org.jfree" name="jcommon" rev="1.0.23"
                 conf="
-                build.core->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server-monitor->master"/>
     <dependency org="org.jfree" name="jfreechart" rev="1.0.19"
                 conf="
-                build.core->master;
-                build.tests->master;
-                build.demos->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server-monitor->master"/>
     <!--client date input handling-->
     <dependency org="com.toedter" name="jcalendar" rev="1.4"
                 conf="
                 runtime.client->master"/>
-    <!--EntityJSONParser plugin and more-->
+    <!--For client json based settings-->
     <dependency org="org.json" name="json" rev="20090211"
                 conf="
-                build.core->master;
-                build.tests->master;
-                build.demos->master;
-                runtime.tests->master;
+                compile->master;
                 runtime.client->master;
                 runtime.server->master"/>
     <!--database used for demos and unit tests-->
     <dependency org="com.h2database" name="h2" rev="1.3.176"
                 conf="
-                runtime.tests->master;
+                test->master;
                 runtime.client->master;
                 runtime.server->master"/>
-    <dependency org="net.sf.jasperreports" name="jasperreports" rev="6.0.0"
-                conf="build.demos->master"/>
-    <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.5"
-                conf="build.demos->master"/>
-    <dependency org="org.apache.httpcomponents" name="httpcore" rev="4.4.1"
-                conf="build.demos->master"/>
-    <dependency org="javax.ws.rs" name="jsr311-api" rev="1.1.1"
-                conf="build.demos->master"/>
   </dependencies>
 </ivy-module>
