@@ -4084,3 +4084,4 @@
   Plugins are now indipendent modules
   Demos are now independent modules
   SwingMessages added, initialized in LoginPanel, this feels like a hack
+  Build file improvements
